# pav

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  Snakefile  pyproject.toml  tox.toml
docs/source/: conf.py  index.rst
files/docker/: build_deps.sh
files/lcmodel/: LC_MODEL_TRAINING.md  train.py
files/lcmodel/lctrain/: __init__.py  const.py  fig.py  (+2 more)
files/tracks/: alignment_track_fields.tsv  lgsv_track_fields.tsv  variant_track_fields.tsv
pavlib/: __init__.py  call.py  cigarcall.py  config.py  const.py  inv.py  io.py  kde.py  pavconfig.py  pipeline.py  seq.py
pavlib/align/: __init__.py  features.py  lift.py  op.py  records.py  score.py  tables.py  trim.py  util.py
pavlib/fig/: __init__.py  inv.py  util.py
pavlib/lgsv/: __init__.py  call.py  chain.py  interval.py  util.py  variant.py
profiles/lra/: config.yaml
profiles/mm2/: config.yaml
rules/: align.smk  call.smk  call_inv.smk  call_lg.smk  call_lg.snakefile  data.smk  global.smk  pipeline.smk  tracks.smk  tracks.snakefile
scripts/: reconstruct_sam.py
src/pav.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pav3/: __init__.py  const.py  inv.py  io.py  params.py  pipeline.py  region.py  schema.py  seq.py  util.py  vcf.py
src/pavcall/: __init__.py  asmstat.py  const.py  inv.py  io.py  kde.py  params.py  pipeline.py  region.py  schema.py  seq.py  util.py  vcf.py
src/scripts/: reconstruct_sam.py
src/workflow/: Snakefile
tests/: TESTING_TODO.md  conftest.py  test_score_dtype.py
tests/align/: test_score.py  test_tables.py
(+134 files in other folders)
